--- a/config/database.yml
+++ b/config/database.yml
@@ -9,24 +9,25 @@
 # And be sure to use new-style password hashing:
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
+
 default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: <%= ENV.fetch("MYSQL_ROOT_PASSWORD", '') %>
   host: <%= ENV.fetch("DB_HOST") { "localhost" } %>
 
 development:
   <<: *default
-  database: app_development
+  database: <%= ENV.fetch("MYSQL_DATABASE") %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: app_test
+  database: <%= ENV.fetch("MYSQL_DATABASE") %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +51,6 @@ test:
 #
 production:
   <<: *default
-  database: app_production
+  database: <%= ENV.fetch("MYSQL_DATABASE") %>
   username: app
   password: <%= ENV["APP_DATABASE_PASSWORD"] %>
