--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ x-common-rails: &common-rails
 services:
   web:
     <<: *common-rails
+    container_name: template-rails-api_web
     command: ["sh", "-c", "rm -f /rails/tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"]
     ports:
       - "3000:3000"
@@ -23,6 +24,7 @@ services:
 
   db:
     image: mysql:8.0
+    container_name: template-rails-api_db
     env_file: env.development
     volumes:
       - mysql_data:/var/lib/mysql
