--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
   "dockerComposeFile": "docker-compose.yml",
   "service": "web",
   "workspaceFolder": "/app",
+  "shutdownAction": "stopCompose",
   "customizations": {
     "vscode": {
       "extensions": [
