--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,17 +1,15 @@
-FROM ruby:3.1.2-slim
+FROM ruby:3.3
 
-WORKDIR /app
+WORKDIR /workspace
 
-RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y curl default-mysql-client libjemalloc2 libvips build-essential default-libmysqlclient-dev git pkg-config openssh-client && \
-    rm -rf /var/lib/apt/lists /var/cache/apt/archives && \
-    curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
-    apt-get install -y nodejs && \
-    npm install -g yarn
-
-ENV BUNDLE_PATH="/usr/local/bundle"
+RUN apt-get update -qq && apt-get install --no-install-recommends -y \
+    curl \
+    openssh-client \
+    default-mysql-client \
+    tree \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY Gemfile Gemfile.lock ./
-RUN bundle install
+RUN bundle install --path 'vendor/bundle'
 
 COPY . .
