--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "time-track",
+  "name": "template-rails-api",
   "dockerComposeFile": "./docker-compose.yml",
   "service": "web",
   "workspaceFolder": "/workspace",
