--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,11 @@
   "workspaceFolder": "/workspace",
   "customizations": {
     "vscode": {
-      "extensions": ["esbenp.prettier-vscode", "Shopify.ruby-extensions-pack"],
+      "extensions": [
+        "esbenp.prettier-vscode",
+        "Shopify.ruby-extensions-pack",
+        "exiasr.hadolint"
+      ],
       "settings": {
         "editor.tabSize": 2,
         "files.trimTrailingWhitespace": true,
