--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -2,7 +2,7 @@ name: Static Analysis
 
 on:
   pull_request:
-    paths: ".github/workflows/*.yml"
+    paths: '.github/workflows/*.yml'
 defaults:
   run:
     shell: bash
