--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,10 +7,14 @@ RUN apt-get update -qq && apt-get install --no-install-recommends -y \
     openssh-client \
     default-mysql-client \
     tree \
+    && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
+    && apt-get install -y nodejs \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -sL https://github.com/hadolint/hadolint/releases/download/v2.8.0/hadolint-Linux-x86_64 -o /usr/local/bin/hadolint \
-    && chmod +x /usr/local/bin/hadolint
+RUN npm install -g yarn
+
+COPY package.json yarn.lock ./
+RUN yarn install
 
 COPY Gemfile Gemfile.lock ./
 RUN bundle install --path 'vendor/bundle'
