--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,11 +5,12 @@ services:
       dockerfile: .devcontainer/Dockerfile
     volumes:
       - ..:/workspace
+      - node_modules_cache:/workspace/node_modules
       - gem_cache:/workspace/vendor/bundle
     env_file: ../.env.development
     tty: true
     stdin_open: true
-    command: ["sleep", "infinity"]
+    command: ['sleep', 'infinity']
     depends_on:
       - db
 
@@ -20,5 +21,6 @@ services:
       - db_data:/var/lib/mysql
 
 volumes:
+  node_modules_cache:
   gem_cache:
   db_data:
